--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,13 @@
       "type": "MIT"
     }
   ],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
   "dependencies": {},
   "devDependencies": {
     "angular": "~1.2.0",
